:pencil: :loud_sound: Update README file and improving the createDriver method log